Fix bug with page reloading on log update submit click. Tweak styling of Info page, add overflow: scroll

--- a/src/Info/Info.css
+++ b/src/Info/Info.css
@@ -5,16 +5,16 @@
   background: url("../utilities/Images/mountains-2.jpg") no-repeat center
   rgba(165, 165, 165, 0.68);
   background-size: auto 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  overflow: auto;
 }
 
 .info-section {
   border: 1px solid white;
   border-radius: 20px;
   background: grey;
-  margin-bottom: 20px;
-  margin-top: 50px;
   opacity: .9;
+  overflow: auto;
   padding: 20px;
 }
 
@@ -23,5 +23,5 @@
   border-radius: 20px;
   display: block;
   font-size: 16px;
-  /* padding: 5px 10px; */
+  padding: 5px 10px;
 }
